--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -62,6 +62,110 @@
 }
 
 
+.footer{
+  background-color: $bg;
+}
+
+.footer-top{
+  padding: 70px 0 40px;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid #ececec;
+  &__item-contacts{
+    width: 250px;
+    flex: none;
+    margin-right: 50px;
+  }
+  &__logo{
+    margin-bottom: 35px;
+    display: block;
+  }
+  &__adress,
+  &__email,
+  &__phone{
+    display: block;
+    margin-bottom: 14px;
+  }
+  &__social-list{
+    display: flex;
+    align-items: center;
+    margin-top: 30px;
+  }
+  &__social-item + .footer-top__social-item{
+    padding-left: 18px;
+  }
+  &__social-link{
+    transition: all .3s;
+    path{
+      fill: $default;
+    }
+    &:hover{
+      path{
+        fill: $accent;
+      }
+    }
+  }
+  &__item-nav{
+    width: 150px;
+    margin-right: 30px;
+    flex: none;
+  }
+  &__title{
+    @extend %roboto-400;
+    font-size: 22px;
+    line-height: 100%;
+    margin-bottom: 40px;
+    color: $title;
+  }
+  &__list-link{
+    margin-bottom: 14px;
+    display: block;
+  }
+  &__item-form{
+    max-width: 470px;
+  }
+  &__text{
+    margin-bottom: 25px;
+  }
+  &__form-input{
+    border: none;
+    background-color: #fff;
+    max-width: 320px;
+    width: 100%;
+    display: inline-block;
+    padding: 15px 10px 15px 15px;
+    box-shadow: 0px 7px 20px 0px rgba(192, 192, 192, 0.3);
+    &::placeholder{
+      color: $default;
+      font-size: 16px;
+    }
+  }
+  &__form-btn{
+    border: none;
+    background-color: $accent;
+    text-transform: uppercase;
+    color: #fff;
+    padding: 15px 26px;
+    box-shadow: 0px 7px 20px 0px rgba(255, 17, 48, 0.3);
+    cursor: pointer;
+  }
+}
+
+.footer-bottom{
+  height: 75px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 12px;
+  line-height: 34px;
+  &__accept-img{
+    margin-left: 25px;
+    display: inline-block;
+    vertical-align: middle;
+  }
+}
+
+
 
 
 @import 'media';
