--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -46,3 +46,51 @@ a{
   margin: 25px auto 55px;
 }
 
+.breadcrumbs{
+  display: inline-flex;
+  justify-content: center;
+  padding-left: 20px;
+  position: relative;
+  &::before{
+    content: "";
+    position: absolute;
+    background-image: url('../images/icons/home-icon.svg');
+    width: 16px;
+    height: 16px;
+    top: 4px;
+    left: 0;
+  }
+  &__list{
+    display: flex;
+  }
+  &__item{
+    padding-right: 40px;
+    color: #727272;
+    position: relative;
+    &::after{
+      content: "";
+      background-image: url('../images/icons/angle_right.svg');
+      position: absolute;
+      width: 9px;
+      height: 10px;
+      right: 15px;
+      top: 9px;
+    }
+    &:last-child{
+      color: $accent;
+      padding-right: 0;
+      &::after{
+        display: none;
+      }
+    }
+  }
+  &__link{
+    line-height: 1;
+    color: inherit;
+  }
+}
+
+.header--page-404{
+  background-color: $bg;
+}
+
