--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -62,6 +62,22 @@
   }
 }
 
+.top{
+  &__container{
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    max-width: 1700px;
+    margin: 0 auto;
+    padding: 120px 0 130px;
+    text-align: center;
+  }
+  &__title{
+    @extend %roboto-400;
+    margin-bottom: 15px;
+  }
+}
+
 
 .footer{
   background-color: $bg;
@@ -632,6 +648,88 @@
   &__item-link{
     display: inline-block;
     transition: all .3s;
+  }
+}
+
+.modal{
+  padding-top: 100px;
+  max-width: 570px;
+  margin: 0 auto 115px;
+  &__links{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 40px;
+  }
+  &__link{
+    @extend %roboto-400;
+    font-size: 22px;
+    color: #909090;
+    text-transform: uppercase;
+    margin: 0 30px;
+  }
+  &__link--active{
+    color: $accent;
+    @extend %roboto-700;
+  }
+  &__label{
+    margin-bottom: 30px;
+    display: block;
+  }
+  &__input{
+    display: block;
+    width: 100%;
+    border: none;
+    background-color: $bg;
+    margin-top: 5px;
+    padding: 0 15px;
+    height: 60px;
+  }
+  &__text{
+    margin-bottom: 25px;
+  }
+  &__btn{
+    display: block;
+    background-color: $title;
+    @extend %roboto-400;
+    color: #fff;
+    letter-spacing: 1.3px;
+    text-transform: uppercase;
+    padding: 14px 0;
+    border: none;
+    width: 100%;
+    cursor: pointer;
+  }
+  &__error{
+    color: $accent;
+    display: inline-block;
+    margin-top: 15px;
+  }
+}
+
+.page-404{
+  padding: 100px 0 110px;
+  &__inner{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  &__content{
+    max-width: 570px;
+    width: 100%;
+  }
+  &__title{
+    color: #28384f;
+    margin-bottom: 20px;
+    text-transform: capitalize;
+    text-align: left;
+  }
+  &__text{
+    margin-bottom: 55px;
+    max-width: 470px;
+    width: 100%;
+  }
+  &__link{
+    @extend %btn;
   }
 }
 
